-Updated memory settings for ecache
git-svn-id: https://subversion.assembla.com/svn/mdss@7325 e0e46c49-be69-4f5a-ad62-21024a331aea

Former-commit-id: 2b7d2a42bf62c1916967415f6364f4e1aa52c752 [formerly 219035a5ffe3d3c5992eca79f8d1b9ef1c84f69f]
Former-commit-id: d99174cf37ff68bc6ce77def4a7f07242a3f434c